get rid of java.desktop module dependency, add lite beans, docker files, new openjdk10/11 alpine glibc images